--- a/ReactMaterial/todo-list/package.json
+++ b/ReactMaterial/todo-list/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"npm run dev:server\" \"next\"",
+    "dev:server": "json-server --watch db.json --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "concurrently": "^9.1.0",
     "json-server": "^1.0.0-beta.3",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
